--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcrypt": "^5.1.1",
     "bson": "^6.8.0",
     "cloudinary": "^2.5.0",
+    "cloudinary-build-url": "^0.2.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
